- Improves "ScreenRGB" Feature
  * The handling of the embedded title banner has been improved by leveraging transparency
  * This significantly reduces the overall file size and ensures backgrounds are fully matched
  * This is a port of the downstream implementation by GitHub user @Joevt
- Fixes 'BootKicker' and 'CleanNvram' Amongst Others
  * Misc memory management defects had disabled both


0.13.2.AK (07 Dec 2021):
-----------------------
- Adds "SupplyNVME" Feature
  * A built in NvmExpress driver is loaded by default to provide NVMe support if required
  * This functionality can be disabled by setting the 'decline_nvmeload' token
  * With this feature, in addition to SupplyAPFS, firmware patching is no longer required on MacPro3,1 and XServe2,1
- Adds "ScreenRGB" Feature
  * Allows overriding the default background colour selection process
  * Users can now specify RGB values to be used instead
- Fixes Display of Mac Recovery Tool Name in RELEASE builds
  * The variable holding the Mac Recovery tool name was wrapped in "Debug" tags
  * Hence the tool name was not displayed in RELEASE builds
- Initial fixes on Mac Recovery For Mac OS 11 (Big Sur) and Later
  * The Mac Recovery implementation inherited by RefindPlus was designed for the HFS+ filesystem
  * Hence, it does not recognise recovery volumes of Mac OS versions with full APFS implementation
    - Mac OS 10.13 (High Sierra) to Mac OS 10.15 (Catalina) have partial/transitional APFS implementations
    - Mac OS 11 (Big Sur) and newer have full APFS implementations
  * ADDITIONAL NOTES:
    - This implementation does not support setups with more than one APFS instance in a single container
    - This implementation is still a work in progress
- Fixes Compilation Issue on Recent GNU-EFI Versions
  * Synced with upstream update as well as an existing issue with 'REFIT_CALL_X_WRAPPER'
  * GNU-EFI compilation of RefindPlus is likely broken overall
- Fixes 'TagsHelp' Feature